<resources>
    <string name="app_name">Task To Do</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="addNewToDo">"Add New To Do Task"</string>
    <string name="noToDoTask">No Task To Do</string>
    <string name="tittle">Tittle</string>
    <string name="inputTittle">inputTittle</string>
    <string name="description">Description</string>
    <string name="search">search</string>
    <string name="sort_by">Sort By</string>
    <string name="priority_high">High Priority</string>
    <string name="priority_low">Low Priority</string>
    <string name="delete_all">Delete All</string>
    <string name="add">Add</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="dummy_tittle">My ToDo Task Title</string>
    <string name="dummy_task_content">This is a dummy text for ToDo Task application uses. Please ignore this text.</string>
    <string name="splash_screen_logo">Splash Screen Logo</string>
    <string name="dev_name">Bishal\'s App</string>
    <string name="app_logo">App Logo</string>

    <string-array name="priorities">
        <item>High Priority</item>
        <item>Medium Priority</item>
        <item>Low Priority</item>
    </string-array>
</resources>